[gd_scene load_steps=6 format=3 uid="uid://dhcc4xstci12w"]

[ext_resource type="Theme" uid="uid://dsy4luaqoryxq" path="res://GameArt/LoLHUD.tres" id="1_70dbp"]
[ext_resource type="Script" path="res://Scripts/PlayerRelated/hud.gd" id="2_4f41s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_odjxi"]
bg_color = Color(0.905882, 0.0980392, 0.054902, 0.862745)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uw0vb"]
bg_color = Color(0.560784, 0.298039, 1, 0.862745)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdc18"]
bg_color = Color(0, 0.639216, 0.945098, 0.862745)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_70dbp")
script = ExtResource("2_4f41s")

[node name="StatsBars" type="VBoxContainer" parent="."]
layout_mode = 1
offset_bottom = 77.0

[node name="HealthBar" type="ProgressBar" parent="StatsBars"]
custom_minimum_size = Vector2(384, 24)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_odjxi")
show_percentage = false

[node name="HealthNumber" type="Label" parent="StatsBars/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -13.0
offset_right = 190.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_70dbp")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ManaBar" type="ProgressBar" parent="StatsBars"]
custom_minimum_size = Vector2(384, 24)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_uw0vb")
show_percentage = false

[node name="ManaNumber" type="Label" parent="StatsBars/ManaBar"]
layout_mode = 0
offset_left = 4.0
offset_right = 380.0
offset_bottom = 23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="StatsBars"]
custom_minimum_size = Vector2(384, 24)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_rdc18")
show_percentage = false

[node name="StaminaNumber" type="Label" parent="StatsBars/StaminaBar"]
layout_mode = 0
offset_right = 383.0
offset_bottom = 23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "000"
horizontal_alignment = 1
vertical_alignment = 1
